--- a/app/src/main/res/layout/activity_tiles.xml
+++ b/app/src/main/res/layout/activity_tiles.xml
@@ -14,21 +14,122 @@
         android:layout_height="wrap_content"
         android:layout_margin="0dp"
         android:background="@color/bgwhite"
-        android:padding="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/navigation">
+        android:padding="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
+            android:gravity="center_vertical"
             android:orientation="vertical"
             android:padding="0dp">
 
+            <!-- closed station time -->
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="20dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layoutDirection="rtl"
+                        android:orientation="horizontal"
+                        android:padding="3dp">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/iransansmobile_bold"
+                            android:gravity="center"
+                            android:text="ایستگاه شهید دستغیب"
+                            android:textColor="@color/fifafontcolor"
+                            android:textDirection="rtl"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/iransansmobile_bold"
+                                android:padding="2dp"
+                                android:text="10:55"
+                                android:textColor="@color/fifafontcolor"
+                                android:textDirection="rtl"
+                                android:textSize="16sp" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/iransansmobile_bold"
+                                android:padding="2dp"
+                                android:text="10:57"
+                                android:textColor="@color/fifafontcolor"
+                                android:textDirection="rtl"
+                                android:textSize="16sp" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="3"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/iransansmobile_medium"
+                                android:padding="2dp"
+                                android:text="به سمت پایانه دستغیب"
+                                android:textColor="@color/fifafontcolor"
+                                android:textDirection="rtl"
+                                android:textSize="16sp" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/iransansmobile_medium"
+                                android:padding="2dp"
+                                android:text="به سمت پایانه احسان"
+                                android:textColor="@color/fifafontcolor"
+                                android:textDirection="rtl"
+                                android:textSize="16sp" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <!-- big event -->
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="5dp"
                 app:cardCornerRadius="3dp"
                 app:cardElevation="2dp">
 
@@ -36,8 +137,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/bgwhite"
-                    android:orientation="vertical"
-                    android:paddingTop="20dp">
+                    android:orientation="vertical">
 
                     <android.support.v4.view.ViewPager
                         android:id="@+id/slide1"
@@ -73,8 +173,8 @@
                     <ImageView
                         android:layout_width="27dp"
                         android:layout_height="27dp"
-                        android:adjustViewBounds="true"
                         android:layout_marginStart="10dp"
+                        android:adjustViewBounds="true"
                         android:contentDescription="@string/action_settings"
                         android:scaleType="fitXY"
                         app:srcCompat="@drawable/news2" />
@@ -1380,6 +1480,7 @@
             </LinearLayout>
 
         </LinearLayout>
+
 
     </ScrollView>
 
