--- a/app/src/main/res/layout/activity_tiles.xml
+++ b/app/src/main/res/layout/activity_tiles.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f2f0f1"
+    android:background="@drawable/tile_background"
     tools:context=".TilesActivity">
 
 
@@ -13,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="0dp"
-        android:background="@color/bgwhite"
         android:padding="0dp">
 
         <LinearLayout
@@ -139,7 +138,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
-                app:cardCornerRadius="3dp"
+                app:cardCornerRadius="0dp"
                 app:cardElevation="2dp">
 
                 <LinearLayout
@@ -631,7 +630,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/bgwhite"
                 android:orientation="vertical"
                 android:padding="0dp">
 
