contact us layout2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -58,6 +58,6 @@
     <color name="btnRequest">#ffbf12</color>
 
     <color name="black_overlay">#66000000</color>
-
+    <color name="feedback_title_color">#594691</color>
 
 </resources>
