--- a/app/src/main/res/layout/cell_content_layout.xml
+++ b/app/src/main/res/layout/cell_content_layout.xml
@@ -19,7 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/order_id_mock"
+            android:fontFamily="@font/iransansmobile"
+            android:text="پیشنهادات"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
@@ -31,7 +32,8 @@
             android:text="@string/price_mock"
             android:textColor="@android:color/white"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:visibility="invisible" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -39,7 +41,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/menu_icon" />
+            android:src="@drawable/menu_icon"
+            android:visibility="invisible" />
 
     </RelativeLayout>
 
@@ -66,7 +69,8 @@
             android:paddingBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingStart="20dp"
-            android:text="@string/requests_count_mock" />
+            android:text="@string/requests_count_mock"
+            android:visibility="invisible" />
 
         <TextView
             style="@style/ContentImageBadgeTitle"
@@ -77,7 +81,8 @@
             android:layout_alignStart="@id/head_image_left_text"
             android:paddingLeft="20dp"
             android:paddingStart="20dp"
-            android:text="@string/requests_count_badge" />
+            android:text="@string/requests_count_badge"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/head_image_right_text"
@@ -90,7 +95,8 @@
             android:paddingBottom="10dp"
             android:paddingEnd="20dp"
             android:paddingRight="20dp"
-            android:text="@string/weight_mock" />
+            android:text="@string/weight_mock"
+            android:visibility="invisible" />
 
         <TextView
             style="@style/ContentImageBadgeTitle"
@@ -99,7 +105,8 @@
             android:layout_above="@id/head_image_right_text"
             android:layout_alignLeft="@id/head_image_right_text"
             android:layout_alignStart="@id/head_image_right_text"
-            android:text="@string/weight_badge" />
+            android:text="@string/weight_badge"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/head_image_center_text"
@@ -109,7 +116,8 @@
             android:layout_alignBottom="@id/head_image"
             android:layout_centerHorizontal="true"
             android:paddingBottom="10dp"
-            android:text="@string/pledge_mock" />
+            android:text="@string/pledge_mock"
+            android:visibility="invisible" />
 
         <TextView
             style="@style/ContentImageBadgeTitle"
@@ -118,7 +126,8 @@
             android:layout_above="@id/head_image_center_text"
             android:layout_alignLeft="@id/head_image_center_text"
             android:layout_alignStart="@id/head_image_center_text"
-            android:text="@string/pledge_badge" />
+            android:text="@string/pledge_badge"
+            android:visibility="invisible" />
 
 
     </RelativeLayout>
