--- a/app/src/main/res/layout/cell_title_layout.xml
+++ b/app/src/main/res/layout/cell_title_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/bgContent"
@@ -10,14 +11,26 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="155dp"
+
         android:layout_weight="3"
         android:background="@color/bgTitleLeft"
-        android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingBottom="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="20dp">
+
+        <ImageView
+            android:id="@+id/left_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/action_settings"
+            android:scaleType="fitXY"
+            android:src="@drawable/idea2" />
 
         <TextView
             android:id="@+id/title_price"
@@ -25,8 +38,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:fontFamily="@font/iransansmobile_medium"
             android:textColor="@android:color/white"
-            android:textSize="26sp" />
+            android:textSize="26sp"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/title_time_label"
@@ -36,7 +51,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textColor="@android:color/white"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/title_date_label"
@@ -46,22 +62,26 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textColor="@android:color/white"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:visibility="invisible" />
 
 
     </RelativeLayout>
+
     <!-- RIGHT TITLE PART -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="@color/bgTitleRight"
+        android:layoutDirection="rtl"
         android:paddingBottom="20dp"
         android:paddingEnd="20dp"
         android:paddingLeft="15dp"
         android:paddingRight="20dp"
         android:paddingStart="15dp"
-        android:paddingTop="20dp">
+        android:paddingTop="20dp"
+        android:textDirection="rtl">
 
         <ImageView
             android:id="@+id/title_from_to_dots"
@@ -73,18 +93,29 @@
             android:layout_marginRight="10dp"
             android:src="@drawable/from_to_purple" />
 
+        <ImageView
+            android:id="@+id/menu_icon_feedback"
+            android:layout_width="35dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="-3dp"
+            android:layout_alignTop="@+id/title_from_to_dots"
+            android:layout_toEndOf="@+id/title_from_to_dots"
+            android:src="@drawable/menu1" />
+
         <TextView
             android:id="@+id/title_from_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/title_from_to_dots"
             android:layout_marginTop="-5dp"
-            android:layout_toEndOf="@+id/title_from_to_dots"
-            android:layout_toRightOf="@+id/title_from_to_dots"
+            android:layout_toEndOf="@+id/menu_icon_feedback"
+            android:layout_toRightOf="@+id/menu_icon_feedback"
             android:ellipsize="marquee"
             android:fadingEdge="horizontal"
+            android:fontFamily="@font/iransansmobile_medium"
             android:singleLine="true"
-            android:textColor="@android:color/black"
+            android:text="@string/idea_header_title"
+            android:textColor="@color/feedback_title_color"
             android:textSize="16sp" />
 
         <ImageView
@@ -92,8 +123,8 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@id/title_from_address"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="3dp"
             android:layout_toEndOf="@+id/title_from_to_dots"
             android:layout_toRightOf="@+id/title_from_to_dots"
             android:src="@color/contentDividerLine" />
@@ -107,8 +138,8 @@
             android:layout_toRightOf="@id/title_from_to_dots"
             android:ellipsize="marquee"
             android:fadingEdge="horizontal"
-            android:singleLine="true"
-            android:textColor="@android:color/black"
+            android:fontFamily="@font/iransansmobile"
+            android:textColor="@color/cardview_dark_background"
             android:textSize="16sp" />
 
 
@@ -119,7 +150,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:visibility="invisible" />
 
         <TextView
             style="@style/TitleBadgeTitle"
@@ -128,7 +160,8 @@
             android:layout_above="@id/title_requests_count"
             android:layout_alignLeft="@id/title_requests_count"
             android:layout_alignStart="@id/title_requests_count"
-            android:text="@string/requests_count_badge" />
+            android:text="@string/requests_count_badge"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/title_weight"
@@ -138,7 +171,8 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:text="@string/weight_mock" />
+            android:text="@string/weight_mock"
+            android:visibility="invisible" />
 
         <TextView
             style="@style/TitleBadgeTitle"
@@ -147,7 +181,8 @@
             android:layout_above="@id/title_weight"
             android:layout_alignLeft="@id/title_weight"
             android:layout_alignStart="@id/title_weight"
-            android:text="@string/weight_badge" />
+            android:text="@string/weight_badge"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/title_pledge"
@@ -155,7 +190,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible" />
 
         <TextView
             style="@style/TitleBadgeTitle"
@@ -164,7 +200,8 @@
             android:layout_above="@id/title_pledge"
             android:layout_alignLeft="@id/title_pledge"
             android:layout_alignStart="@id/title_pledge"
-            android:text="@string/pledge_badge" />
+            android:text="@string/pledge_badge"
+            android:visibility="invisible" />
 
     </RelativeLayout>
 </LinearLayout>
