--- a/app/src/main/res/drawable/contactus_bg_gradient.xml
+++ b/app/src/main/res/drawable/contactus_bg_gradient.xml
@@ -1,8 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <gradient
-        android:startColor="#01a67e"
-        android:centerColor="#11559c "
-        android:endColor="#1a18aa"
+        android:startColor="#00b8e8"
+        android:centerColor="#33cbf3 "
+        android:endColor="#00b8e8"
         android:angle="-90"/>
     <corners
         android:radius="0dp"/>
