contact us layout7

--- a/app/src/main/res/layout/activity_app_improve.xml
+++ b/app/src/main/res/layout/activity_app_improve.xml
@@ -10,11 +10,11 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#dcffd6"
         android:focusableInTouchMode="true"
-        android:background="#ece6ff"
         android:layoutDirection="rtl"
         android:textDirection="rtl"
-        tools:context=".SuggestFormActivity">
+        tools:context=".AppImproveActivity">
 
 
         <ImageView
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_margin="0dp"
-            android:background="#594691"
+            android:background="#519146"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -32,7 +32,7 @@
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_marginTop="45dp"
-            android:src="@drawable/idea2"
+            android:src="@drawable/app"
             app:civ_border_color="@color/bgwhite"
             app:civ_border_width="1dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,45 +40,17 @@
             app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="15dp"
-            android:fontFamily="@font/iransansmobile_medium"
-            android:text="عنوان پیشنهاد:"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/circularImageView" />
-
-        <EditText
-            android:id="@+id/editText2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:ems="10"
-            android:inputType="text"
-            android:labelFor="@id/textView3"
-            android:textDirection="rtl"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-        <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/iransansmobile_medium"
-            android:text="شرح پیشنهاد:"
+            android:text="ارائه پیشنهادات جهت بهتر شدن اپ مترو:"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editText2" />
+            app:layout_constraintTop_toBottomOf="@id/circularImageView" />
 
         <EditText
             android:id="@+id/editText3"
@@ -88,13 +60,16 @@
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:ems="10"
-            android:lines="5"
-            android:minLines="5"
+            android:ems="5"
+            android:padding="5dp"
+            android:background="@color/bgwhite"
+            android:hint="در این قسمت می توانید با ارائه پیشنهادات خود ، ما را در بهتر کردن امکانات اپ مترو همیاری کنید ، با تشکر"
             android:fontFamily="@font/iransansmobile"
             android:gravity="top|start"
             android:inputType="textMultiLine"
             android:labelFor="@id/textView4"
+            android:lines="7"
+            android:minLines="7"
             android:scrollbars="vertical"
             android:textDirection="rtl"
             android:verticalScrollbarPosition="left"
@@ -106,9 +81,9 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
-            android:background="#594691"
+            android:layout_marginTop="8dp"
+            android:background="#519146"
             android:fontFamily="@font/iransansmobile_bold"
             android:text="ارسال"
             android:textColor="@color/bgwhite"
