--- a/app/src/main/res/layout/activity_complaint.xml
+++ b/app/src/main/res/layout/activity_complaint.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ffe6e6"
+        android:focusableInTouchMode="true"
         android:layoutDirection="rtl"
         android:textDirection="rtl"
         tools:context=".ComplaintActivity">
